fix: stack BackToTop above SoundToggle to prevent overlap

--- a/components/ui/BackToTop/BackToTop.module.css
+++ b/components/ui/BackToTop/BackToTop.module.css
@@ -9,7 +9,7 @@
 
 .button {
     position: fixed;
-    bottom: 80px;
+    bottom: 136px;
     right: 24px;
     z-index: 150;
 
@@ -66,7 +66,7 @@
 
 @media (max-width: 480px) {
     .button {
-        bottom: 64px;
+        bottom: 116px;
         right: 16px;
         width: 40px;
         height: 40px;
